gcc/testsuite/rust/rustc/ui/recursion_limit/issue-105700.rs
#![recursion_limit="4"]
#![invalid_attribute]
#![invalid_attribute]
#![invalid_attribute]
#![invalid_attribute]
#![invalid_attribute]
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

